Fix user login with pressing tab to enter

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -19,7 +19,7 @@
                         <a class="btn waves-light" ng-click="vm.forget_password_modal()">Reset</a>
                     </div>
                     <div class="col s12 m5 l5 push-l2">
-                        <a class="btn waves-light" ng-click="vm.login()">Login</a>
+                        <button class="btn waves-light" ng-click="vm.login()">Login</button>
                     </div>
                 </div>
             </div>
