--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,7 @@
     	<script src="app/app.module.js"></script>
         <script src="app/app.config.js"></script>
         <script src="app/app.run.js"></script>
+        <script src="app/api/data.js"></script>
         <script src="app/home/home.js"></script>
         <script src="app/home/navigation.js"></script>
         <script src="app/home/reset_password.js"></script>
@@ -94,6 +95,7 @@
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
         <script src="app/report/gprs_flow.js"></script>
+        <script src="app/report/idle.js"></script>
         <script src="app/admin/home.js"></script>
         <script src="app/admin/users.js"></script>
         <script src="app/admin/location.js"></script>
