--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -1,6 +1,6 @@
 <p class="headerrow">Idling Report</p>
 <div class="row">
-    <div class="col s12 m12 l10">
+    <div class="col s12 m12 l12">
         <div class="col s12 m12 l3">
             <p>Vehicle Number Plate: <input type="text" id="platenumber" ng-model="vm.plate_number"></p>
         </div>
@@ -31,68 +31,120 @@
 
         <div class="col s12 m12 l2">
             <a class="btn" ng-click="vm.get_idle()">Statistics</a>
-            <a class="btn buttonspace">Export</a>
+            <a class="btn buttonspace" ng-click="vm.export_data()">Export</a>
         </div>
     </div>
-
-    <div class="col s12 m12 l12">
-        <p class="col s12 m12 l5">Statistical Time: <b>01-03-2016 00:00:00</b></p>
-        <p class="col s12 m12 l4">Tabulation Time: <b>01-03-2016 Current Time</b></p>
-        <div class="col s12 m12 l6">
-            <div class="col s12 m12 l12">
-                <p class="col s12 m12 l3">Vehicle Name:</p>
-                <p class="col s12 m12 l4"><b>INOKOM BIG ABC 1234</b></p>
-            </div>
-            <div class="col s12 m12 l12">
-                <p class="col s12 m12 l3">Driver Name:</p>
-                <p class="col s12 m12 l4"><b>GENE LIM</b></p>
-            </div>
-        </div>
-        <div class="col s12 m12 l6">
-            <div class="col s12 m12 l12">
-                <p class="col s12 m12 l3">Driver Contact 1:</p>
-                <p class="col s12 m12 l4"><b>0123456789</b></p>
-            </div>
-            <div class="col s12 m12 l12">
-                <p class="col s12 m12 l3">Driver Contact 2:</p>
-                <p class="col s12 m12 l4"><b>0412345678</b></p>
-            </div>
-        </div>
-        <table>
-            <thead class="tablehead">
-                <tr>
-                    <td>START DATE TIME</td>
-                    <td>END DATE TIME</td>
-                    <td>DURATION OF IDLE</td>
-                    <td>IDLING(LITRE)</td>
-                    <td>POI ADDRESS</td>
-                    <td>LOCATION</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="idle in vm.idle">
-                    <td>{{idle.gpsTime  | date:'medium'}}</td>
-                    <td>{{idle.end_date | date:'medium'}}</td>
-                    <td>{{idle.total_hours | number : 2}} hours</td>
-                    <td>0</td>
-                    <td>1.0239431 & 1.29482139</td>
-                    <td>SPICE ARENA, Bayan Lepas, Pulau Pinang</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="center" style="padding-top:1%">
+    <div ng-if="vm.idle.length">
         <div class="col s12 m12 l12">
-            <ul class="pagination">
-                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
-                <li class="active"><a href="#!">1</a></li>
-                <li class="waves-effect"><a href="#!">2</a></li>
-                <li class="waves-effect"><a href="#!">3</a></li>
-                <li class="waves-effect"><a href="#!">4</a></li>
-                <li class="waves-effect"><a href="#!">5</a></li>
-                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
-            </ul>
+            <!--<p class="col s12 m12 l5">Statistical Time: <b>01-03-2016 00:00:00</b></p>
+            <p class="col s12 m12 l4">Tabulation Time: <b>01-03-2016 Current Time</b></p>-->
+            <div class="col s12 m12 l6">
+                <div class="col s12 m12 l12">
+                    <p class="col s12 m12 l3">Vehicle Name:</p>
+                    <p class="col s12 m12 l4" ng-if="!vm.idle.carBrand && !vm.idle.carNO"><b>N/A</b></p>
+                    <p class="col s12 m12 l4" ng-if="!vm.idle.carBrand && vm.idle.carNO"><b>Brand N/A - {{vm.idle.carNO}}</b></p>
+                    <p class="col s12 m12 l4" ng-if="vm.idle.carBrand && vm.idle.carNO"><b>{{vm.idle.carBrand}} - {{vm.idle.carNO}}</b></p>
+                </div>
+                <div class="col s12 m12 l12">
+                    <p class="col s12 m12 l3">Driver Name:</p>
+                    <p class="col s12 m12 l4" ng-if="!vm.idle.driver"><b>N/A</b></p>
+                    <p class="col s12 m12 l4" ng-if="vm.idle.driver"><b>{{vm.idle.driver}}</b></p>
+                </div>
+            </div>
+            <div class="col s12 m12 l6">
+                <div class="col s12 m12 l12">
+                    <p class="col s12 m12 l3">Driver Contact 1:</p>
+                    <p class="col s12 m12 l4" ng-if="!vm.idle.driverTel"><b>N/A</b></p>
+                    <p class="col s12 m12 l4" ng-if="vm.idle.driverTel"><b>{{vm.idle.driverTel}}</b></p>
+                </div>
+                <div class="col s12 m12 l12">
+                    <p class="col s12 m12 l3">Driver Contact 2:</p>
+                    <p class="col s12 m12 l4" ng-if="!vm.idle.driver2Tel"><b>N/A</b></p>
+                    <p class="col s12 m12 l4" ng-if="vm.idle.driver2Tel"><b>{{vm.idle.driver2Tel}}</b></p>
+                </div>
+            </div>
+            <div id="exportable">
+                <table>
+                    <thead class="tablehead">
+                        <tr>
+                            <td>START DATE TIME</td>
+                            <td>END DATE TIME</td>
+                            <td>DURATION OF IDLE</td>
+                            <td>IDLING(LITRE)</td>
+                            <td>POI ADDRESS</td>
+                            <td>LOCATION</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="idle in vm.idle">
+                            <td>{{idle.gpsTime  | date:'medium'}}</td>
+                            <td>{{idle.end_date | date:'medium'}}</td>
+                            <td>{{idle.total_hours | number : 2}} hours</td>
+                            <td>0</td>
+                            <td>{{idle.lo}} , {{idle.la}}</td>
+                            <td>{{idle.address}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="center" style="padding-top:1%">
+            <div class="col s12 m12 l12">
+                <ul class="pagination">
+                    <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
+                    <li class="active"><a href="#!">1</a></li>
+                    <li class="waves-effect"><a href="#!">2</a></li>
+                    <li class="waves-effect"><a href="#!">3</a></li>
+                    <li class="waves-effect"><a href="#!">4</a></li>
+                    <li class="waves-effect"><a href="#!">5</a></li>
+                    <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="text-align:center; padding-top:10em;">
+        <div class="preloader-wrapper medium active"ng-if="!vm.idle.length && vm.search_active">
+            <div class="spinner-layer spinner-blue">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-red">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-yellow">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-green">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
