--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
         <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="libs/jquery/dist/jquery.min.js"></script>
         <script src="libs/materialize/dist/js/materialize.min.js"></script>
+        <script src="https://rawgithub.com/eligrey/FileSaver.js/master/FileSaver.js" type="text/javascript"></script>
     	<script src="app/app.module.js"></script>
         <script src="app/app.config.js"></script>
         <script src="app/app.run.js"></script>
