--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -1,6 +1,6 @@
 <p class="headerrow">Idling Report</p>
 <div class="row">
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12" ng-if="vm.loaded">
         <div class="col s12 m12 l3">
             <p>Vehicle Number Plate: <input type="text" id="platenumber" ng-model="vm.plate_number"></p>
         </div>
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="row" style="text-align:center; padding-top:10em;">
-        <div class="preloader-wrapper medium active"ng-if="!vm.idle.length && vm.search_active">
+        <div class="preloader-wrapper medium active"ng-if="!vm.idle.length && vm.search_active || !vm.loaded">
             <div class="spinner-layer spinner-blue">
                 <div class="circle-clipper left">
                 <div class="circle"></div>
