--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
         <script src="libs/jquery/dist/jquery.min.js"></script>
         <script src="libs/materialize/dist/js/materialize.min.js"></script>
         <script src="https://rawgithub.com/eligrey/FileSaver.js/master/FileSaver.js" type="text/javascript"></script>
+        <script src="libs/angularUtils-pagination/dirPagination.js" type="text/javascript"></script>
     	<script src="app/app.module.js"></script>
         <script src="app/app.config.js"></script>
         <script src="app/app.run.js"></script>
@@ -96,6 +97,7 @@
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
         <script src="app/report/gprs_flow.js"></script>
+        <script src="app/report/driving_records.js"></script>
         <script src="app/report/idle.js"></script>
         <script src="app/admin/home.js"></script>
         <script src="app/admin/users.js"></script>
