--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -88,7 +88,8 @@
                 </table>
             </div>
         </div>
-
+        <div class="divider"></div>
+        
         <div class="center" style="padding-top:1%">
             <div class="col s12 m12 l12">
                 <ul class="pagination">
