--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@
         <script src="app/report/home.js"></script>
         <script src="app/report/gprs_flow.js"></script>
         <script src="app/report/driving_records.js"></script>
+        <script src="app/report/vehicle_mileage.js"></script>
         <script src="app/report/idle.js"></script>
         <script src="app/admin/home.js"></script>
         <script src="app/admin/users.js"></script>
