--- a/public/app/report/driving_records.html
+++ b/public/app/report/driving_records.html
@@ -40,6 +40,7 @@
         </div>
     </div>
 
+        <div id="exportable" ng-if="vm.driving_records_full.data.length">
 
     <div class="col s12 m12 l12 menuseperator">
         <div ng-if="vm.driving_records_full.plate_number">
@@ -48,7 +49,6 @@
             <p class="col s12 m12 l3">Total mileage(km) : <b>{{vm.driving_records_full.total_mileage  | number: 4}}</b></p>
             <p class="col s12 m12 l3">Average speed : <b>{{vm.driving_records_full.t_speed  | number: 4}}</b></p>
         </div>
-        <div id="exportable" ng-if="vm.driving_records_full.data.length">
             <table>
                 <thead class="tablehead">
                 <tr>
@@ -63,7 +63,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr dir-paginate="records in vm.driving_records_full.data |itemsPerPage:10">
+                    <tr dir-paginate="records in vm.driving_records_full.data |itemsPerPage: vm.per_page">
                         <td>{{records.gpsTime  | date : 'longDate'}}</td>
                         <td>{{records.gpsTime | date : 'HH:mm:ss'}}</td>
                         <td>{{records.fuel}}</td>
@@ -75,7 +75,6 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
         <p ng-if="!vm.driving_records_full.data.length && vm.driving_records_full.plate_number">No Records</p>
         <div class="divider"></div>
         
@@ -86,6 +85,8 @@
                 boundary-links="true" >
                 </dir-pagination-controls>
         </div>
+        </div>
+        
     </div>
     <div class="row" style="text-align:center; padding-top:10em;">
         <div class="preloader-wrapper medium active"ng-if="vm.search_active || !vm.loaded">
