--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -76,7 +76,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="idle in vm.idle">
+                        <tr dir-paginate="idle in vm.idle | itemsPerPage: vm.per_page">
                             <td>{{idle.gpsTime  | date:'medium'}}</td>
                             <td>{{idle.end_date | date:'medium'}}</td>
                             <td>{{idle.total_hours | number : 2}} hours</td>
@@ -87,20 +87,13 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <div class="divider"></div>
-        
-        <div class="center" style="padding-top:1%">
-            <div class="col s12 m12 l12">
-                <ul class="pagination">
-                    <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
-                    <li class="active"><a href="#!">1</a></li>
-                    <li class="waves-effect"><a href="#!">2</a></li>
-                    <li class="waves-effect"><a href="#!">3</a></li>
-                    <li class="waves-effect"><a href="#!">4</a></li>
-                    <li class="waves-effect"><a href="#!">5</a></li>
-                    <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
-                </ul>
+            <div class="divider"></div>
+            <div class="row"  ng-if="vm.all_car.cars.length">
+                <dir-pagination-controls class="pagination" style="margin: 0 auto;    text-align: center;"
+                    max-size="7"
+                    direction-links="true"
+                    boundary-links="true" >
+                    </dir-pagination-controls>
             </div>
         </div>
     </div>
