--- a/public/app/report/vehicle_mileage.html
+++ b/public/app/report/vehicle_mileage.html
@@ -7,7 +7,7 @@
             </select>
         </div>
 
-        <div class="col s12 m12 l4">
+        <div class="col s12 m12 l6">
             <div class="col s12 m12 l12">
                 <div class="col s12 m12 l2">
                     From:
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s12 m12 l4">
+        <div class="col s12 m12 l2">
             Statistical method:
             <select class="browser-default">
                 <option>Statistic for all</option>
@@ -39,9 +39,7 @@
         <a class="btn buttonspace">Export</a>
     </div>
 
-    <div class="col s12 m12 l12 menuseperator">
-        <p class="col s12 m12 l6 left">Statistical time:</p>
-        <p class="col s12 m12 l6 right">Tabulation time:(Current time)</p>
+    <div class="col s12 m12 l12 menuseperator" ng-if="vm.all_car.cars.length">
         <table>
             <thead class="tablehead">
             <tr>
@@ -55,48 +53,68 @@
             </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Abc Fleet</td>
-                    <td>ABC 1234</td>
-                    <td>7:00:00</td>
-                    <td>150</td>
-                    <td>80</td>
-                    <td>36</td>
-                    <td>101</td>
-                </tr>
-                <tr>
-                    <td>Abc Fleet</td>
-                    <td>DEF 5678</td>
-                    <td>7:20:00</td>
-                    <td>130</td>
-                    <td>84</td>
-                    <td>42</td>
-                    <td>110</td>
-                </tr>
-                <tr>
-                    <td>Abc Fleet</td>
-                    <td>PGM 5249</td>
-                    <td>7:15:00</td>
-                    <td>140</td>
-                    <td>90</td>
-                    <td>45</td>
-                    <td>110</td>
+                <tr dir-paginate="mileage  in vm.all_car.cars | itemsPerPage: vm.per_page">
+                    <td>{{mileage.plate_number.group}}</td>
+                    <td>{{mileage.plate_number.name}}</td>
+                    <td>{{mileage.journey_time | number:2}} hours</td>
+                    <td>{{mileage.total_mileage}}</td>
+                    <td>{{mileage.average_speed | number:2}}</td>
+                    <td>{{mileage.total_fuel}}</td>
+                    <td>{{mileage.max_speed}}</td>
                 </tr>
             </tbody>
         </table>
+        <div class="divider"></div>
+        <div class="row"  ng-if="vm.all_car.cars.length">
+            <dir-pagination-controls class="pagination" style="margin: 0 auto;    text-align: center;"
+                max-size="7"
+                direction-links="true"
+                boundary-links="true" >
+                </dir-pagination-controls>
+        </div>
     </div>
+    
+    <div class="row" style="text-align:center; padding-top:10em;">
+        <div class="preloader-wrapper medium active" ng-if="vm.search_active || !vm.loaded">
+            <div class="spinner-layer spinner-blue">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
 
-    <div class="center" style="padding-top:1%">
-        <div class="col s12 m12 l12">
-            <ul class="pagination">
-                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
-                <li class="active"><a href="#!">1</a></li>
-                <li class="waves-effect"><a href="#!">2</a></li>
-                <li class="waves-effect"><a href="#!">3</a></li>
-                <li class="waves-effect"><a href="#!">4</a></li>
-                <li class="waves-effect"><a href="#!">5</a></li>
-                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
-            </ul>
+            <div class="spinner-layer spinner-red">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-yellow">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-green">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
