parking UI, change month to date and extend width

--- a/public/app/report/fuel_consumption.html
+++ b/public/app/report/fuel_consumption.html
@@ -11,8 +11,8 @@
                     <div class="col s12 m12 l2">
                         From:
                     </div>
-                    <div class="col s12 m12 l6">
-                        <input id="from" type="month">
+                    <div class="col s12 m12 l10">
+                        <input id="from" type="date">
                     </div>
                 </div>
 
@@ -20,8 +20,8 @@
                     <div class="col s12 m12 l2">
                         To:
                     </div>
-                    <div class="col s12 m12 l6">
-                        <input id="to" type="month">
+                    <div class="col s12 m12 l10">
+                        <input id="to" type="date">
                     </div>
                 </div>
             </div>
