--- a/public/app/report/gprs_flow.html
+++ b/public/app/report/gprs_flow.html
@@ -11,8 +11,8 @@
                     <div class="col s12 m12 l2">
                         From:
                     </div>
-                    <div class="col s12 m12 l6">
-                        <input id="from" type="month" ng-model="vm.date.a">
+                    <div class="col s12 m12 l10">
+                        <input id="from" type="date" ng-model="vm.date.a">
                     </div>
                 </div>
 
@@ -20,8 +20,8 @@
                     <div class="col s12 m12 l2">
                         To:
                     </div>
-                    <div class="col s12 m12 l6">
-                        <input id="to" type="month" ng-model="vm.date.b">
+                    <div class="col s12 m12 l10">
+                        <input id="to" type="date" ng-model="vm.date.b">
                     </div>
                 </div>
             </div>
