--- a/public/app/report/home.html
+++ b/public/app/report/home.html
@@ -1,23 +1,23 @@
 <div class="controls">
     <ul id="slide-out" class="side-nav fixed controls_side_nav">
         <li><a ui-sref=".history_playback">History Playback</a></li>
-        <li><a ui-sref=".gprs_flow">Check GPRS Flow</a></li>
+        <!--<li><a ui-sref=".gprs_flow">Check GPRS Flow</a></li>
         <li><a ui-sref=".operation_log">Check Operation Log</a></li>
         <li><a ui-sref=".find_photo">Find Photo</a></li>
         <li><a ui-sref=".alarm_records">Alarm Records</a></li>
-        <li><a ui-sref=".alarm_frequency">Alarm Frequency</a></li>
+        <li><a ui-sref=".alarm_frequency">Alarm Frequency</a></li>-->
         <li><a ui-sref=".driving_records">Driving Records</a></li>
         <li><a ui-sref=".vehicle_mileage">Vehicle Mileage</a></li>
         <li><a ui-sref=".fuel_consumption">Fuel Consumption</a></li>
-        <li><a ui-sref=".parking">Parking</a></li>
+        <!--<li><a ui-sref=".parking">Parking</a></li>
         <li><a ui-sref=".status">Status</a></li>
         <li><a class="dropdown-button"  data-activates="geofence">GEO Fence</a></li>
         <li><a ui-sref=".trip_event">Trip Event</a></li>
         <li><a ui-sref=".running_trip">Running Trip</a></li>
         <li><a class="dropdown-button"  data-activates="temperature">Temperature</a></li>
-        <li><a ui-sref=".rf_data">RF Data</a></li>
+        <li><a ui-sref=".rf_data">RF Data</a></li>-->
         <li><a ui-sref=".idle">Idle</a></li>
-        <li><a ui-sref=".fuel_management">Fuel Management</a></li>
+        <!--<li><a ui-sref=".fuel_management">Fuel Management</a></li>-->
     </ul>
     <div ui-view></div>
 </div>
