--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,7 @@
         <script src="app/admin/location.js"></script>
         <script src="app/shared/user.js"></script>
         <script src="app/shared/authentication.js"></script>
+        <script src="app/shared/group_car_load.js"></script>
         <script src="assets/js/script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3&libraries=geometry"></script>
     </body>
