--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -128,7 +128,11 @@
                     <div class="row">
                         <div class="col s3">SPEED</div>
                         <div class="col s1">:</div>
-                        <div class="col s8"><b>{{vm.car_details_full[vm.index].data[0].speed}} km/h</b></div>
+                        <div class="col s8">
+                            <b ng-style="vm.car_details_full[vm.index].data[0].speed > 99 && {'color':'red'} ||  {'color':'black'}">
+                                {{vm.car_details_full[vm.index].data[0].speed}} km/h
+                            </b>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col s3">ADDRESS</div>
