--- a/public/app/report/home.html
+++ b/public/app/report/home.html
@@ -18,6 +18,8 @@
         <li><a ui-sref=".rf_data">RF Data</a></li>-->
         <li><a ui-sref=".idle">Idle</a></li>
         <!--<li><a ui-sref=".fuel_management">Fuel Management</a></li>-->
+        <li><a ui-sref=".refuel">Refuel</a></li>
+        <li><a ui-sref=".all_vehicle_summary">All Vehicle Summary</a></li>
     </ul>
     <div ui-view></div>
 </div>
